# pinguard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_SUMMARY.md  SECURITY.md  TODO.md  config.example.yaml  release_notes.md
.github/workflows/: ci.yml  docker.yml  release.yml
docker/: Dockerfile  Dockerfile.test  docker-compose.test.yml  test-config.yaml
pinGuard/: CLEANUP_REPORT.md  Cargo.toml  REFACTORING_SUMMARY.md  WARNING_CLEANUP_REPORT.md  config.yaml  scan_results.json
pinGuard/benches/: benchmarks.rs
pinGuard/examples/: test_backup_system.rs
pinGuard/src/: lib.rs  main.rs  main_old.rs  testing.rs
pinGuard/src/backup/: integrity.rs  manager.rs  mod.rs  rollback.rs  rpo.rs  snapshot.rs  versioning.rs
pinGuard/src/cli/: app.rs  display.rs  help.rs  interactive.rs  mod.rs
pinGuard/src/cli/commands/: backup.rs  completion.rs  config.rs  cve.rs  database.rs  fix.rs  mod.rs  report.rs  scan.rs  schedule.rs
pinGuard/src/core/: config.rs  enhanced_config.rs  errors.rs  mod.rs  service_locator.rs  traits.rs  utils.rs
pinGuard/src/cve/: cve_manager.rs  mod.rs  nvd_client.rs
pinGuard/src/database/: cve_cache.rs  migrations.rs  mod.rs  scan_history.rs
pinGuard/src/fixers/: enhanced_package_updater.rs  firewall_configurator.rs  kernel_updater.rs  manager.rs  mod.rs  package_updater.rs  permission_fixer.rs  service_hardener.rs  user_policy_fixer.rs
pinGuard/src/report/: html_reporter.rs  json_reporter.rs  manager.rs  mod.rs  pdf_reporter.rs
pinGuard/src/scanners/: compliance.rs  container_security.rs  enhanced_package_audit.rs  kernel_check.rs  manager.rs  mod.rs  network_audit.rs  package_audit.rs  permission_audit.rs  service_audit.rs  user_audit.rs  web_security_scanner.rs
pinGuard/src/scheduler/: mod.rs  schedule_manager.rs  scheduler_types.rs  systemd_integration.rs
pinGuard/src/tui/: app.rs  components.rs  events.rs  mod.rs  theme.rs
pinGuard/src/tui/screens/: fixer.rs  main_menu.rs  mod.rs  reports.rs  scanner.rs  scanner_demo.rs  scanner_new.rs  settings.rs
release_assets/: pinGuard-linux-x86_64.tar.gz.sha256
scripts/: install.sh  prepare_release.sh
tests/: integration_tests.rs
