[package]
name = "pinGuard"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.5.47"
libc = "0.2.175"
serde = { version = "1.0.225", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
printpdf = "0.7.0"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
regex = "1.0"
uuid = { version = "1.0", features = ["v4"] }
