[package]
name = "pinGuard"
version = "0.1.1"
edition = "2021"
rust-version = "1.70"
authors = ["PinGuard Team <team@pinGuard.dev>"]
description = "Linux-first Vulnerability Scanner & Remediator"
documentation = "https://github.com/reicalasso/pinGuard/wiki"
homepage = "https://github.com/reicalasso/pinGuard"
repository = "https://github.com/reicalasso/pinGuard"
license = "MIT"
readme = "../README.md"
keywords = ["security", "vulnerability", "scanner", "linux", "cve"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "pin_guard"
path = "src/lib.rs"

[[bin]]
name = "pinGuard"
path = "src/main.rs"

[features]
default = ["tls", "json-reports"]
tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls-tls"]
json-reports = ["serde_json"]
html-reports = []
pdf-reports = ["printpdf"]
benchmarks = []

[dependencies]
clap = { version = "4.5.47", features = ["derive", "cargo"] }
libc = "0.2.175"
serde = { version = "1.0.225", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = { version = "1.0", optional = true }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
printpdf = { version = "0.7.0", optional = true }
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time"] }
regex = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.0"
mockito = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"

[[bench]]
name = "benchmarks"
harness = false
required-features = ["benchmarks"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[profile.test]
opt-level = 0
debug = true

[profile.bench]
opt-level = 3
debug = false
lto = true
